@@ -1962,6 +1962,28 @@ operator|.
 name|getLogDirs
 argument_list|()
 decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLocalDirs
+init|=
+name|ctx
+operator|.
+name|getContainerLocalDirs
+argument_list|()
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLogDirs
+init|=
+name|ctx
+operator|.
+name|getContainerLogDirs
+argument_list|()
+decl_stmt|;
 name|Map
 argument_list|<
 name|Path
@@ -2382,6 +2404,20 @@ argument_list|(
 name|LOG_DIRS
 argument_list|,
 name|logDirs
+argument_list|)
+operator|.
+name|setExecutionAttribute
+argument_list|(
+name|CONTAINER_LOCAL_DIRS
+argument_list|,
+name|containerLocalDirs
+argument_list|)
+operator|.
+name|setExecutionAttribute
+argument_list|(
+name|CONTAINER_LOG_DIRS
+argument_list|,
+name|containerLogDirs
 argument_list|)
 operator|.
 name|setExecutionAttribute
