@@ -1949,6 +1949,22 @@ argument_list|)
 argument_list|)
 throw|;
 block|}
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLocalDirs
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|localDirs
+operator|.
+name|size
+argument_list|()
+argument_list|)
+decl_stmt|;
 try|try
 block|{
 comment|// /////////// Write out the container-script in the nmPrivate space.
@@ -2026,6 +2042,50 @@ name|appsdir
 argument_list|,
 name|appIdStr
 argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|containerLocalDir
+init|=
+name|localDir
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+operator|+
+name|ContainerLocalizer
+operator|.
+name|USERCACHE
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+operator|+
+name|user
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+operator|+
+name|ContainerLocalizer
+operator|.
+name|APPCACHE
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+operator|+
+name|appIdStr
+operator|+
+name|Path
+operator|.
+name|SEPARATOR
+decl_stmt|;
+name|containerLocalDirs
+operator|.
+name|add
+argument_list|(
+name|containerLocalDir
 argument_list|)
 expr_stmt|;
 block|}
@@ -2299,6 +2359,16 @@ operator|.
 name|setLogDirs
 argument_list|(
 name|logDirs
+argument_list|)
+operator|.
+name|setContainerLocalDirs
+argument_list|(
+name|containerLocalDirs
+argument_list|)
+operator|.
+name|setContainerLogDirs
+argument_list|(
+name|containerLogDirs
 argument_list|)
 operator|.
 name|build
