@@ -1236,6 +1236,42 @@ argument_list|(
 name|LOG_DIRS
 argument_list|)
 decl_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLocalDirs
+init|=
+name|ctx
+operator|.
+name|getExecutionAttribute
+argument_list|(
+name|CONTAINER_LOCAL_DIRS
+argument_list|)
+decl_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLogDirs
+init|=
+name|ctx
+operator|.
+name|getExecutionAttribute
+argument_list|(
+name|CONTAINER_LOG_DIRS
+argument_list|)
+decl_stmt|;
 name|Set
 argument_list|<
 name|String
@@ -1321,7 +1357,7 @@ operator|new
 name|ArrayList
 argument_list|<>
 argument_list|(
-name|localDirs
+name|containerLocalDirs
 argument_list|)
 decl_stmt|;
 name|allDirs
@@ -1338,7 +1374,7 @@ name|allDirs
 operator|.
 name|addAll
 argument_list|(
-name|logDirs
+name|containerLogDirs
 argument_list|)
 expr_stmt|;
 for|for
