@@ -366,6 +366,48 @@ argument_list|,
 literal|"log_dirs"
 argument_list|)
 decl_stmt|;
+DECL|field|CONTAINER_LOCAL_DIRS
+specifier|public
+specifier|static
+specifier|final
+name|Attribute
+argument_list|<
+name|List
+argument_list|>
+name|CONTAINER_LOCAL_DIRS
+init|=
+name|Attribute
+operator|.
+name|attribute
+argument_list|(
+name|List
+operator|.
+name|class
+argument_list|,
+literal|"container_local_dirs"
+argument_list|)
+decl_stmt|;
+DECL|field|CONTAINER_LOG_DIRS
+specifier|public
+specifier|static
+specifier|final
+name|Attribute
+argument_list|<
+name|List
+argument_list|>
+name|CONTAINER_LOG_DIRS
+init|=
+name|Attribute
+operator|.
+name|attribute
+argument_list|(
+name|List
+operator|.
+name|class
+argument_list|,
+literal|"container_log_dirs"
+argument_list|)
+decl_stmt|;
 DECL|field|RESOURCES_OPTIONS
 specifier|public
 specifier|static
