@@ -203,6 +203,24 @@ name|String
 argument_list|>
 name|logDirs
 decl_stmt|;
+DECL|field|containerLocalDirs
+specifier|private
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLocalDirs
+decl_stmt|;
+DECL|field|containerLogDirs
+specifier|private
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLogDirs
+decl_stmt|;
 DECL|class|Builder
 specifier|public
 specifier|static
@@ -268,6 +286,22 @@ argument_list|<
 name|String
 argument_list|>
 name|logDirs
+decl_stmt|;
+DECL|field|containerLocalDirs
+specifier|private
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLocalDirs
+decl_stmt|;
+DECL|field|containerLogDirs
+specifier|private
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLogDirs
 decl_stmt|;
 DECL|method|Builder ()
 specifier|public
@@ -459,6 +493,50 @@ return|return
 name|this
 return|;
 block|}
+DECL|method|setContainerLocalDirs (List<String> containerLocalDirs)
+specifier|public
+name|Builder
+name|setContainerLocalDirs
+parameter_list|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLocalDirs
+parameter_list|)
+block|{
+name|this
+operator|.
+name|containerLocalDirs
+operator|=
+name|containerLocalDirs
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+DECL|method|setContainerLogDirs (List<String> containerLogDirs)
+specifier|public
+name|Builder
+name|setContainerLogDirs
+parameter_list|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLogDirs
+parameter_list|)
+block|{
+name|this
+operator|.
+name|containerLogDirs
+operator|=
+name|containerLogDirs
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
 DECL|method|build ()
 specifier|public
 name|ContainerStartContext
@@ -553,6 +631,22 @@ operator|=
 name|builder
 operator|.
 name|logDirs
+expr_stmt|;
+name|this
+operator|.
+name|containerLocalDirs
+operator|=
+name|builder
+operator|.
+name|containerLocalDirs
+expr_stmt|;
+name|this
+operator|.
+name|containerLogDirs
+operator|=
+name|builder
+operator|.
+name|containerLogDirs
 expr_stmt|;
 block|}
 DECL|method|getContainer ()
@@ -706,6 +800,36 @@ name|this
 operator|.
 name|logDirs
 argument_list|)
+return|;
+block|}
+DECL|method|getContainerLocalDirs ()
+specifier|public
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|getContainerLocalDirs
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|containerLocalDirs
+return|;
+block|}
+DECL|method|getContainerLogDirs ()
+specifier|public
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|getContainerLogDirs
+parameter_list|()
+block|{
+return|return
+name|this
+operator|.
+name|containerLogDirs
 return|;
 block|}
 block|}
