@@ -682,6 +682,20 @@ name|String
 argument_list|>
 name|logDirs
 decl_stmt|;
+DECL|field|containerLocalDirs
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLocalDirs
+decl_stmt|;
+DECL|field|containerLogDirs
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|containerLogDirs
+decl_stmt|;
 DECL|field|resourcesOptions
 name|String
 name|resourcesOptions
@@ -964,6 +978,20 @@ name|resourcesOptions
 operator|=
 literal|"cgroups=none"
 expr_stmt|;
+name|containerLocalDirs
+operator|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+expr_stmt|;
+name|containerLogDirs
+operator|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+expr_stmt|;
 name|localDirs
 operator|.
 name|add
@@ -976,6 +1004,20 @@ operator|.
 name|add
 argument_list|(
 literal|"/test_log_dir"
+argument_list|)
+expr_stmt|;
+name|containerLocalDirs
+operator|.
+name|add
+argument_list|(
+literal|"/test_container_local_dir"
+argument_list|)
+expr_stmt|;
+name|containerLogDirs
+operator|.
+name|add
+argument_list|(
+literal|"/test_container_log_dir"
 argument_list|)
 expr_stmt|;
 name|builder
@@ -1058,6 +1100,20 @@ argument_list|(
 name|LOG_DIRS
 argument_list|,
 name|logDirs
+argument_list|)
+operator|.
+name|setExecutionAttribute
+argument_list|(
+name|CONTAINER_LOCAL_DIRS
+argument_list|,
+name|containerLocalDirs
+argument_list|)
+operator|.
+name|setExecutionAttribute
+argument_list|(
+name|CONTAINER_LOG_DIRS
+argument_list|,
+name|containerLogDirs
 argument_list|)
 operator|.
 name|setExecutionAttribute
@@ -1722,7 +1778,7 @@ name|runAsUser
 argument_list|,
 name|containerWorkDir
 argument_list|,
-name|localDirs
+name|containerLocalDirs
 operator|.
 name|get
 argument_list|(
@@ -1731,7 +1787,7 @@ argument_list|)
 argument_list|,
 name|containerWorkDir
 argument_list|,
-name|logDirs
+name|containerLogDirs
 operator|.
 name|get
 argument_list|(
